--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 </div>
 
 <main class="container">
-  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary" style="background-image: url('/assets/img/rsz_istock-1197289798.webp">
+  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary" style="background-image: url('/assets/img/rsz_istock-1197289798.webp');">
     <div class="col-lg-6 px-0">
       <h1 class="display-4 fst-italic">As cidades inteligentes</h1>
       <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
@@ -371,7 +371,7 @@
     </div>
 
     <div class="col-md-4">
-      <div class="position-sticky" style="top: 2rem;">
+      <div class="position-sticky" style="top:2rem;">
         <div class="p-4 mb-3 bg-body-tertiary rounded">
           <h4 class="fst-italic">About</h4>
           <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
